tests/models/enum/named/f64/fail/ge.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(ge = 2)]
        value: f64
    },
}
fn main() {}
